Bug 489505 - "Replace NS_ASSERTION(0, ...) by NS_ERROR(...) in comm-central" [r+sr=Standard8]